basic html complete, htmlRoutes complete, form is collecting data and creating new friend entry

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -35,50 +35,28 @@
             <hr>
 
 
-            <!-- <div class="form-group"> -->
-            <label for="sel1">
-                <h3>
-                    <b>Question 1</b>
-                </h3>
-            </label>
-            <br>
-            <p1>You lead a very active lifestyle.</p1>
-            <br>
-            <!-- <select class="form-control" id="sel1" name="answer-one"> 
-                    <input type="text" placeholder="Select an Option">
-                    <option>1 (Strongly Disagree)</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5 (Strongly Agree)</option>
-                    </select>
-                    </div> -->
-            <div class="dropdown">
-                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="true">Select an Option
-                    <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li>
-                        5 (Strongly Agree)
-                    </li>
-                    <li>
-                        4
-                    </li>
 
-                    <li>
-                        3
-                    </li>
-                    <li>
-                        2
-                    </li>
-                    <li>
-                        1 (Strongly Disagree)
-                    </li>
-                </ul>
-            </div>
             <div class="form-group">
-                <label for="sel1">
+                <label for="question_one">
+                    <h3>
+                        <b>Question 1</b>
+                    </h3>
+                </label>
+                <br>
+                <p1>You lead a very active lifestyle.</p1>
+                <br>
+                <select class="form-control" id="sel1" name="sel_one">
+
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label for="question_two">
                     <h3>
                         <b>Question 2</b>
                     </h3>
@@ -86,19 +64,18 @@
                 <br>
                 <p1>You enjoy watching your favorite sports team on television.</p1>
                 <br>
+                <select class="form-control" id="sel2" name="sel_two">
 
-                <select class="form-control" id="sel1" name="answer-one">
-                    <!-- <input type="text" placeholder="Select an Option"> -->
-                    <option>1 (Strongly Disagree)</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5 (Strongly Agree)</option>
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
                 </select>
             </div>
 
             <div class="form-group">
-                <label for="sel1">
+                <label for="question_three">
                     <h3>
                         <b>Question 3</b>
                     </h3>
@@ -106,18 +83,18 @@
                 <br>
                 <p1>You enjoy going to the movie theater even though netflix is cheaper.</p1>
                 <br>
-                <select class="form-control" id="sel1" name="answer-one">
-                    <!-- <input type="text" placeholder="Select an Option"> -->
-                    <option>1 (Strongly Disagree)</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5 (Strongly Agree)</option>
+                <select class="form-control" id="sel3" name="sel_three">
+
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
                 </select>
             </div>
 
             <div class="form-group">
-                <label for="sel1">
+                <label for="question_four">
                     <h3>
                         <b>Question 4</b>
                     </h3>
@@ -125,18 +102,18 @@
                 <br>
                 <p1>When you hear music you can't help but dance.</p1>
                 <br>
-                <select class="form-control" id="sel1" name="answer-one">
-                    <!-- <input type="text" placeholder="Select an Option"> -->
-                    <option>1 (Strongly Disagree)</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5 (Strongly Agree)</option>
+                <select class="form-control" id="sel4" name="sel_four">
+
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
                 </select>
             </div>
 
             <div class="form-group">
-                <label for="sel1">
+                <label for="question_five">
                     <h3>
                         <b>Question 5</b>
                     </h3>
@@ -144,18 +121,18 @@
                 <br>
                 <p1>You have done things that would be considered adventurous.</p1>
                 <br>
-                <select class="form-control" id="sel1" name="answer-one">
-                    <!-- <input type="text" placeholder="Select an Option"> -->
-                    <option>1 (Strongly Disagree)</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5 (Strongly Agree)</option>
+                <select class="form-control" id="sel5" name="sel_five">
+
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
                 </select>
             </div>
 
             <div class="form-group">
-                <label for="sel1">
+                <label for="question_six">
                     <h3>
                         <b>Question 6</b>
                     </h3>
@@ -163,18 +140,18 @@
                 <br>
                 <p1>You enjoy spending an evening playing games and hanging with friends.</p1>
                 <br>
-                <select class="form-control" id="sel1" name="answer-one">
-                    <!-- <input type="text" placeholder="Select an Option"> -->
-                    <option>1 (Strongly Disagree)</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5 (Strongly Agree)</option>
+                <select class="form-control" id="sel6" name="sel_six">
+
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
                 </select>
             </div>
 
             <div class="form-group">
-                <label for="sel1">
+                <label for="question_seven">
                     <h3>
                         <b>Question 7</b>
                     </h3>
@@ -182,18 +159,18 @@
                 <br>
                 <p1>You sometimes find yourself pondering the meaning of it all.</p1>
                 <br>
-                <select class="form-control" id="sel1" name="answer-one">
-                    <!-- <input type="text" placeholder="Select an Option"> -->
-                    <option>1 (Strongly Disagree)</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5 (Strongly Agree)</option>
+                <select class="form-control" id="sel7" name="sel_seven">
+
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
                 </select>
             </div>
 
             <div class="form-group">
-                <label for="sel1">
+                <label for="question_eight">
                     <h3>
                         <b>Question 8</b>
                     </h3>
@@ -201,18 +178,17 @@
                 <br>
                 <p1>You love animals, especially your pets.</p1>
                 <br>
-                <select class="form-control" id="sel1" name="answer-one">
-                    <!-- <input type="text" placeholder="Select an Option"> -->
-                    <option>1 (Strongly Disagree)</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5 (Strongly Agree)</option>
+                <select class="form-control" id="sel8" name="sel_eight">
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
                 </select>
             </div>
 
             <div class="form-group">
-                <label for="sel1">
+                <label for="question_nine">
                     <h3>
                         <b>Question 9</b>
                     </h3>
@@ -220,18 +196,18 @@
                 <br>
                 <p1>You sometimes spend hours reading books.</p1>
                 <br>
-                <select class="form-control" id="sel1" name="answer-one">
-                    <!-- <input type="text" placeholder="Select an Option"> -->
-                    <option>1 (Strongly Disagree)</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5 (Strongly Agree)</option>
+                <select class="form-control" id="sel9" name="sel_nine">
+
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
                 </select>
             </div>
 
             <div class="form-group">
-                <label for="sel1">
+                <label for="question_ten">
                     <h3>
                         <b>Question 10</b>
                     </h3>
@@ -239,16 +215,16 @@
                 <br>
                 <p1>You are a very laid back person.</p1>
                 <br>
-                <select class="form-control" id="sel1" name="answer-one">
-                    <!-- <input type="text" placeholder="Select an Option"> -->
-                    <option>1 (Strongly Disagree)</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5 (Strongly Agree)</option>
+                <select class="form-control" id="sel10" name="sel_ten">
+
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
                 </select>
             </div>
-            <button type="button" class="btn btn-primary btn-block btn-lg">
+            <button type="submit" id="submit" class="btn btn-primary btn-block btn-lg">
                 <span class="glyphicon glyphicon-ok-sign"></span> Submit</button>
             <hr>
 
@@ -258,10 +234,41 @@
                 |
                 <a href="#">GitHub Repo</a>
             </p>
-            <!-- </div> -->
+
         </div>
     </div>
 
 </body>
 
 </html>
+
+<script type="text/javascript">
+    $("#submit").on("click", function (event) {
+        event.preventDefault();
+        alert("clicked");
+        // Here we grab the form elements
+
+        var newFriends = {
+            name: $("#name").val().trim(),
+            photo: $("#photo").val().trim(),
+            scores: []
+        };
+        for (i = 1; i < 11; i++) {
+            var newScore = $("#sel" + i).val().trim();
+            newFriends.scores.push(newScore);
+        }
+        console.log(newFriends);
+    });
+
+    $.post("/api/friendslist", newFriends,
+        function (data) {
+            // If a table is available... tell user they are booked.
+            if (data) {
+                alert("Yay! We will find you a match.");
+            }
+            // If a table is available... tell user they on the waiting list.
+            else {
+                alert("Sorry you are on the wait list");
+            }
+        });
+</script>
