links and buttons connected, logic for comparing friends scores added

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -20,19 +20,20 @@
             <hr>
             <h2>Answer a few basic questions.</h2>
             <h2>Then find the friend with the greatest compatibility!</h2>
-            <br>
-            <a href="/">
+
+            <a href="/survey">
                 <div class="btn-group">
                     <button type="button" class="btn btn-primary btn-lg">
                         <span class="glyphicon glyphicon-list-alt"></span> Go to Survey</button>
-                    <br>
             </a>
+            <br>
+
             </div>
         </div>
         <div class="container">
             <p>
 
-                <a href="/api/friendslist">API Friends List</a>
+                <a href="/api/friends">API Friends List</a>
                 |
                 <a href="#">GitHub Repo</a>
             </p>
