--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -230,7 +230,7 @@
 
             <p>
 
-                <a href="/api/friendslist">API Friends List</a>
+                <a href="/api/friends">API Friends List</a>
                 |
                 <a href="#">GitHub Repo</a>
             </p>
@@ -268,7 +268,7 @@
             }
             // If a table is available... tell user they on the waiting list.
             else {
-                alert("Sorry you are on the wait list");
+                alert("Sorry you have no match.....try again.");
             }
         });
 </script>
