working and returning correct friend choice

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -35,7 +35,7 @@
 
                 <a href="/api/friends">API Friends List</a>
                 |
-                <a href="#">GitHub Repo</a>
+                <a href="https://github.com/DMWIGGINS/FriendFinder">GitHub Repo</a>
             </p>
         </div>
 
