added comments and updated readme

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -13,6 +13,7 @@
 
 <body>
 
+    <!-- heading for home page of FriendFinder -->
     <div class="container">
         <div class="jumbotron">
             <h1>
@@ -21,18 +22,18 @@
             <h2>Answer a few basic questions.</h2>
             <h2>Then find the friend with the greatest compatibility!</h2>
 
+            <!-- button to take user to survey -->
             <a href="/survey">
                 <div class="btn-group">
                     <button type="button" class="btn btn-primary btn-lg">
                         <span class="glyphicon glyphicon-list-alt"></span> Go to Survey</button>
             </a>
             <br>
-
             </div>
         </div>
         <div class="container">
             <p>
-
+                <!-- links to friends data and github repository -->
                 <a href="/api/friends">API Friends List</a>
                 |
                 <a href="https://github.com/DMWIGGINS/FriendFinder">GitHub Repo</a>
